--- a/remote_template.html
+++ b/remote_template.html
@@ -129,6 +129,13 @@
       border-radius: 20px;
       margin-bottom: 10px;
     }
+    .truncate {
+      white-space: nowrap;    
+      overflow: hidden;      
+      text-overflow: ellipsis;  
+      display: block;         
+      max-width: 200px;       
+    }
     .product-image-wrap {
       width: 100px;
       height: 100px;
