--- a/remote_template.html
+++ b/remote_template.html
@@ -447,7 +447,7 @@
       <div class="section-body">
         <div class="field-grid">
           <div class="field"><div class="field-label">Product Name</div><div class="field-value">{{#if credentialSubject.name}}{{credentialSubject.name}}{{else}}—{{/if}}</div></div>
-          <div class="field"><div class="field-label">Registered ID</div><div class="field-value mono">{{#if credentialSubject.registeredId}}{{credentialSubject.registeredId}}{{else}}—{{/if}}</div></div>
+          <div class="field"><div class="field-label">Registered ID</div><div class="field-value mono">{{#if credentialSubject.id}}{{credentialSubject.id}}{{else}}—{{/if}}</div></div>
           <div class="field"><div class="field-label">Serial Number</div><div class="field-value mono">{{#if credentialSubject.serialNumber}}{{credentialSubject.serialNumber}}{{else}}—{{/if}}</div></div>
           <div class="field"><div class="field-label">Batch Number</div><div class="field-value mono">{{#if credentialSubject.batchNumber}}{{credentialSubject.batchNumber}}{{else}}—{{/if}}</div></div>
           <div class="field"><div class="field-label">Country of Production</div><div class="field-value country-code">{{#if credentialSubject.countryOfProduction}}🌏 {{credentialSubject.countryOfProduction}}{{else}}—{{/if}}</div></div>
