--- a/remote_template.html
+++ b/remote_template.html
@@ -1,6 +1,4 @@
 
-  <title>UNTP Digital Product Passport</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=DM+Mono&family=DM+Sans:wght@300;400;500;600&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -411,7 +409,7 @@
   <header class="passport-header">
     <div class="header-inner">
       <div>
-        <div class="header-badge"><span></span>UN Transparency Protocol · Digital Product Passport</div>
+        <div class="header-badge"><span></span>UNTP · Digital Product Passport</div>
         <h1 class="passport-title">{{credentialSubject.name}}</h1>
         <p class="passport-subtitle truncate">Credential ID: {{id}}</p>
         <div class="header-meta">
