--- a/remote_template.html
+++ b/remote_template.html
@@ -37,15 +37,15 @@
         rgba(0,158,219,0.04) 41px
       );
     }
-* 1. Constrain the Dark Header Background */
+
 .passport-header {
   background: var(--un-dark);
   color: white;
   padding: 0;
   position: relative;
   overflow: hidden;
-  max-width: 800px; /* Force the dark bar to 800px */
-  margin: 0 auto;   /* Center it */
+  max-width: 800px; 
+  margin: 0 auto;  
 }
 
 /* 2. Constrain the Inner Header Content */
