--- a/remote_template.html
+++ b/remote_template.html
@@ -520,7 +520,7 @@
       </div>
     </div>
     {{/if}}
-
+xxxxx
     {{#if credentialSubject.traceabilityInformation.length}}
     <div class="section-card">
       <div class="section-head"><div class="section-icon icon-blue">🔗</div><h2>Traceability Information</h2></div>
