--- a/remote_template.html
+++ b/remote_template.html
@@ -520,7 +520,7 @@
       </div>
     </div>
     {{/if}}
-{{ credentialSubject.traceabilityInformation }}
+<pre> {{ credentialSubject.traceabilityInformation }} </pre>
     {{#if credentialSubject.traceabilityInformation.length}}
     z
     <div class="section-card">
