--- a/remote_template_2.html
+++ b/remote_template_2.html
@@ -293,17 +293,19 @@
         {{#if credentialSubject.traceabilityInformation}}
         <div class="panel-section" style="margin-top:30px;">
             <div class="section-title">Value Chain Traceability</div>
-            <div class="trace-header">
-                <span style="font-size:0.9rem">Process Step: <b>{{credentialSubject.traceabilityInformation.valueChainProcess}}</b></span>
-                {{#if credentialSubject.traceabilityInformation.verifiedRatio}}
-                <span class="status-pill pill-safe">Verified: {{multiply credentialSubject.traceabilityInformation.verifiedRatio 100}}%</span>
-                {{/if}}
-            </div>
-            <div class="trace-events-grid">
-                {{#each credentialSubject.traceabilityInformation.traceabilityEvent}}
-                <a href="{{linkURL}}" class="btn-action trace-link">{{linkName}} ↗</a>
-                {{/each}}
-            </div>
+            {{#each credentialSubject.traceabilityInformation}}
+                <div class="trace-header">
+                    <span style="font-size:0.9rem">Process Step: <b>{{credentialSubject.traceabilityInformation.valueChainProcess}}</b></span>
+                    {{#if credentialSubject.traceabilityInformation.verifiedRatio}}
+                    <span class="status-pill pill-safe">Verified: {{multiply credentialSubject.traceabilityInformation.verifiedRatio 100}}%</span>
+                    {{/if}}
+                </div>
+                <div class="trace-events-grid">
+                    {{#each credentialSubject.traceabilityInformation.traceabilityEvent}}
+                    <a href="{{linkURL}}" class="btn-action trace-link">{{linkName}} ↗</a>
+                    {{/each}}
+                </div>
+            {{/each}}
         </div>
         {{/if}}
 
