--- a/remote_template_2.html
+++ b/remote_template_2.html
@@ -425,7 +425,7 @@
                   {{/each}}
                 </tbody>
               </table>
-            {{//each}}
+            {{/each}}
             </div>
         {{/if}}
 
